--- a/myWebsite/Home_Page.html
+++ b/myWebsite/Home_Page.html
@@ -35,10 +35,10 @@
     <div class="w3-top">
       <div class="w3-row w3-padding w3-black">
         <div class="w3-col s3">
-          <a href="https://firstwebsite-chris1239.c9users.io/myWebsite/Bio_Page.html" class="w3-button w3-block w3-black">Biography</a>
+          <a href="https://chrisaqui.github.io/myWebsite/Bio_Page.html" class="w3-button w3-block w3-black">Biography</a>
         </div>
         <div class="w3-col s3">
-          <a href="https://firstwebsite-chris1239.c9users.io/myWebsite/Portflio_Page.html" class="w3-button w3-block w3-black">Portfolio</a>
+          <a href="https://chrisaqui.github.io/myWebsite/Portflio_Page.html" class="w3-button w3-block w3-black">Portfolio</a>
         </div>
       </div>
     </div>
