--- a/myWebsite/Portflio_Page.html
+++ b/myWebsite/Portflio_Page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-https://24ways.org/2012/how-to-make-your-site-look-half-decent/
+
 <html>
     <head>
         <title> Portfolio </title>
@@ -15,6 +15,8 @@ https://24ways.org/2012/how-to-make-your-site-look-half-decent/
     </head>
     <body>
         <h1>BLANK PAGE :D</h1>
+        <a href="https://chrisaqui.github.io/myWebsite/Home_Page.html">HOME</a>
+        <a href="https://chrisaqui.github.io/myWebsite/Bio_Page.html">BIOGRAPHY</a>
         
     </body>
 </html>
